background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,9 +13,9 @@ body {
   background-image: url("../resources/background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 100vw;
-  min-height: 100vh;
+  background-size: 100vw 100vh;
   font-family: pokemonFontSolid;
+  -webkit-overflow-scrolling: auto;
 }
 
 .navbar {
